# PA-Backend-Rust

./: .env.example  API_DOCUMENTATION.md  Cargo.toml  README.md
migrations/: roles_migration.sql  schema.sql  supabase_migration.sql
scripts/: migrate_to_supabase.rs  setup_db.sh
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
src/models/: user.rs
