[package]
name = "my-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
axum-extra = { version = "0.4", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.4", features = ["trace"] }
bcrypt = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"

[[bin]]
name = "migrate_to_supabase"
path = "scripts/migrate_to_supabase.rs"
